SPRING FRAMEWORK CHANGELOG
==========================
http://www.springframework.org


Changes in 2.5.x maintenance branch
-----------------------------------

General
* updated to AspectJ 1.6.6 to solve transaction management failures when using AspectJ and load-time weaving (SPR-6392)

Package org.springframework.beans
* avoid potential NPE (SPR-5930 backport)
* fixed inconsistent getBean(String name, Object [] args) behavior (SPR-5790 backport)
* collect exceptions across all constructors that have been tried (SPR-6720 backport)

Package org.springframework.context
* ReloadableResourceBundleMessageSource correctly calculates filenames for locales with variant but without country now (SPR-5716 backport)

Package org.springframework.core
* revised Java 6 checks to test for the presence of specific Java 6 interfaces/classes only (SPR-5786)

Package org.springframework.jdbc
* added sort to all error code categories for SQLErrorCodes (SPR-5272)
* added custom SQLExceptionTranslator to provide customized translation for any SQLException (SPR-4899 backport)
* added a DuplicatKeyException catagory for SQLException translation (SPR-5125 backport)
* added a concrete GenericSqlQuery class to make it possible to configure in application context (SPR-3986 backport)
* added a concrete GenericStoredProcedure class to make it possible to configure using application context (SPR-3987 backport)
* added synchronized to compile of AbstractJdbcCall and AbstractJdbcInsert (SPR-6001 backport)
* added -1218 to the transientDataAccessResourceCodes for DB2 (SPR-5296 backport)
* added 4060 as DataAccessResourceFailure code for MS-SQL (SPR-5788 backport) 
* added override for supportsGetGeneratedKeys for Derby; driver reports this is unsupported, but it seems to work OK (SPR-5306 backport)
* fixed problem retrieving out parameter for function call with MS SQL Server (SPR-5435 backport)